--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ openai==0.27.8
 paramiko==3.3.1
 Pillow==10.0.0
 proglog==0.1.10
-PyAudio==0.2.13
+PyAudio
 pycparser==2.21
 PyNaCl==1.5.0
 requests==2.31.0
